@@ -1,19 +1,23 @@
 package com.example.service.specification;
 
-import com.example.dto.LegalCaseSearchCriteria;
+import com.example.model.LegalCaseSearchCriteria;
 import com.example.model.LegalCase;
 import com.example.model.Status;
-import jakarta.persistence.criteria.*;
-import org.jspecify.annotations.Nullable;
+import jakarta.persistence.criteria.CriteriaBuilder;
+import jakarta.persistence.criteria.CriteriaQuery;
+import jakarta.persistence.criteria.Path;
+import jakarta.persistence.criteria.Predicate;
+import jakarta.persistence.criteria.Root;
+import org.springframework.lang.Nullable;
 import org.springframework.data.jpa.domain.Specification;
 
 import java.math.BigDecimal;
 import java.util.ArrayList;
 import java.util.List;
+
 public class LegalCaseSpecification implements Specification<LegalCase> {
 
-        private LegalCaseSearchCriteria searchCriteria;
-
+    private LegalCaseSearchCriteria searchCriteria;
 
     public LegalCaseSpecification(LegalCaseSearchCriteria searchCriteria) {
         this.searchCriteria = searchCriteria;
@@ -21,32 +25,36 @@ public class LegalCaseSpecification implements Specification<LegalCase> {
 
 
         @Override
-        public @Nullable Predicate toPredicate(Root<LegalCase> root, CriteriaQuery<?> query, CriteriaBuilder criteriaBuilder) {
-
-            Path<String> title = root.get("title");
-            Path<String> description = root.get("description");
-            Path<BigDecimal>amountPath= root.get("amount");
-            Path<Status> statusPath = root.get("status");
-
-            final List<Predicate> predicates = new ArrayList<Predicate>();
-
-            if(searchCriteria.getTitle() != null && !searchCriteria.getTitle().isBlank()) {
-                predicates.add(criteriaBuilder.like(title, "%" + searchCriteria.getTitle() + "%"));
+        public Predicate toPredicate(Root<LegalCase> root, CriteriaQuery<?> query, CriteriaBuilder cb) {
+            if (searchCriteria == null) {
+                return cb.conjunction();
             }
 
-            if(searchCriteria.getDescription() != null && !searchCriteria.getDescription().isBlank()) {
-                predicates.add(criteriaBuilder.like(description, "%" + searchCriteria.getDescription() + "%"));
+            final List<Predicate> predicates = new ArrayList<>();
+
+
+            String title = searchCriteria.getTitle();
+            if (title != null && !title.trim().isEmpty()) {
+                predicates.add(cb.like(root.get("title"), "%" + title + "%"));
             }
 
-            if(searchCriteria.getAmount() != null){
-                predicates.add(criteriaBuilder.equal(root.get("amount"), searchCriteria.getAmount()));
-            }
-            if(searchCriteria.getStatus() != null){
-                predicates.add(criteriaBuilder.equal(statusPath, searchCriteria.getStatus()));
+
+            String description = searchCriteria.getDescription();
+            if (description != null && !description.trim().isEmpty()) {
+                predicates.add(cb.like(root.get("description"), "%" + description + "%"));
             }
 
-            return criteriaBuilder.and(predicates.toArray(new Predicate[predicates.size()]));
+
+            if (searchCriteria.getAmount() != null) {
+                predicates.add(cb.equal(root.get("amount"), searchCriteria.getAmount()));
+            }
+
+
+            if (searchCriteria.getStatus() != null) {
+                predicates.add(cb.equal(root.get("status"), searchCriteria.getStatus()));
+            }
+
+
+            return cb.and(predicates.toArray(new Predicate[0]));
         }
     }
-
-
